# bezier

./: .gitignore  CMakeLists.txt  README.md  polyfem_indices.py  precompute.m  precompute.nb  precompute.py
.github/workflows/: continuous.yml
cmake/recipes/: eigen.cmake  gmp.cmake  high_five.cmake  indirect_predicates.cmake  paraviewo_ext.cmake  zlib.cmake
src/: CMakeLists.txt  element_validity.hpp  globals.hpp  main.cpp
src/numbers/: CMakeLists.txt  Interval.cpp  Interval.hpp  Matrix.cpp  Matrix.hpp  Matrix.tpp  Rational.cpp  Rational.hpp
src/precomputed/: macros.hpp
src/utils/: CMakeLists.txt  Settings.cpp  Settings.hpp  Timer.hpp  combinatorics.hpp  cxx17span.hpp  eigen.cpp  eigen.hpp  globals.hpp  helpString.hpp  par_for.hpp  parallelMin.hpp
src/validity/: .ValidityChecker.cpp.swo  .ValidityChecker.cpp.swp  .ValidityChecker.hpp.swp  CMakeLists.txt  ContinuousValidator.hpp  JacobianEvaluator.hpp  StaticValidator.hpp  Validator.cpp  Validator.hpp  ValidityChecker.cpp  ValidityChecker.hpp  cornerIndices.cpp  cornerIndices.hpp  element_validity.cpp  element_validity.hpp  lagrangeEvaluate.hpp  lagrangeVector.cpp  lagrangeVector.hpp  lagrangeVectorT_1_1_1.cpp  lagrangeVectorT_1_1_2.cpp  lagrangeVectorT_1_1_3.cpp  lagrangeVectorT_1_1_4.cpp  lagrangeVectorT_1_1_5.cpp  lagrangeVectorT_2_1_1.cpp  lagrangeVectorT_2_1_2.cpp  lagrangeVectorT_2_2_1.cpp  lagrangeVectorT_2_2_2.cpp  lagrangeVectorT_2_2_3.cpp  lagrangeVectorT_2_2_4.cpp  lagrangeVectorT_3_1_1.cpp  lagrangeVectorT_3_1_2.cpp  lagrangeVectorT_3_3_1.cpp  lagrangeVectorT_3_3_2.cpp  lagrangeVectorT_3_3_3.cpp  lagrangeVectorT_3_3_4.cpp  lagrangeVector_1_1_1.cpp  lagrangeVector_1_1_2.cpp  lagrangeVector_1_1_3.cpp  lagrangeVector_1_1_4.cpp  lagrangeVector_1_1_5.cpp  (+44 more)
src/validity/lageval/: CMakeLists.txt  lagrangeEvaluate_1_1_1.cpp  lagrangeEvaluate_1_1_2.cpp  lagrangeEvaluate_1_1_3.cpp  lagrangeEvaluate_1_1_4.cpp  lagrangeEvaluate_1_1_5.cpp  lagrangeEvaluate_2_1_1.cpp  lagrangeEvaluate_2_1_2.cpp  lagrangeEvaluate_2_2_1.cpp  lagrangeEvaluate_2_2_2.cpp  lagrangeEvaluate_2_2_3.cpp  lagrangeEvaluate_2_2_4.cpp  lagrangeEvaluate_3_1_1.cpp  lagrangeEvaluate_3_2_1.cpp  lagrangeEvaluate_3_3_1.cpp  lagrangeEvaluate_3_3_2.cpp  lagrangeEvaluate_3_3_3.cpp  lagrangeEvaluate_3_3_4.cpp
src/validity/lagvec/: CMakeLists.txt  lagrangeVector_1_1_1.cpp  lagrangeVector_1_1_2.cpp  lagrangeVector_1_1_3.cpp  lagrangeVector_1_1_4.cpp  lagrangeVector_1_1_5.cpp  lagrangeVector_2_1_1.cpp  lagrangeVector_2_1_2.cpp  lagrangeVector_2_2_1.cpp  lagrangeVector_2_2_2.cpp  lagrangeVector_2_2_3.cpp  lagrangeVector_2_2_4.cpp  lagrangeVector_3_1_1.cpp  lagrangeVector_3_2_1.cpp  lagrangeVector_3_3_1.cpp  lagrangeVector_3_3_2.cpp  lagrangeVector_3_3_3.cpp  lagrangeVector_3_3_4.cpp  lagrangeVector_3_3_4_chunk0.cpp  lagrangeVector_3_3_4_chunk1.cpp  lagrangeVector_3_3_4_chunk2.cpp  lagrangeVector_3_3_4_chunk3.cpp  lagrangeVector_3_3_4_chunk4.cpp  lagrangeVector_3_3_4_chunks.hpp
src/validity/lagvecT/: CMakeLists.txt  lagrangeVectorT_1_1_1.cpp  lagrangeVectorT_1_1_2.cpp  lagrangeVectorT_1_1_3.cpp  lagrangeVectorT_1_1_4.cpp  lagrangeVectorT_1_1_5.cpp  lagrangeVectorT_2_1_1.cpp  lagrangeVectorT_2_1_2.cpp  lagrangeVectorT_2_2_1.cpp  lagrangeVectorT_2_2_2.cpp  lagrangeVectorT_2_2_3.cpp  lagrangeVectorT_2_2_4.cpp  lagrangeVectorT_3_1_1.cpp  lagrangeVectorT_3_2_1.cpp  lagrangeVectorT_3_3_1.cpp  lagrangeVectorT_3_3_2.cpp  lagrangeVectorT_3_3_3.cpp  lagrangeVectorT_3_3_4.cpp  lagrangeVectorT_3_3_4_chunk0.cpp  lagrangeVectorT_3_3_4_chunk1.cpp  lagrangeVectorT_3_3_4_chunk10.cpp  lagrangeVectorT_3_3_4_chunk11.cpp  lagrangeVectorT_3_3_4_chunk12.cpp  lagrangeVectorT_3_3_4_chunk13.cpp  lagrangeVectorT_3_3_4_chunk14.cpp  lagrangeVectorT_3_3_4_chunk15.cpp  lagrangeVectorT_3_3_4_chunk16.cpp  lagrangeVectorT_3_3_4_chunk17.cpp  lagrangeVectorT_3_3_4_chunk2.cpp  lagrangeVectorT_3_3_4_chunk3.cpp  lagrangeVectorT_3_3_4_chunk4.cpp  lagrangeVectorT_3_3_4_chunk5.cpp  lagrangeVectorT_3_3_4_chunk6.cpp  lagrangeVectorT_3_3_4_chunk7.cpp  lagrangeVectorT_3_3_4_chunk8.cpp  lagrangeVectorT_3_3_4_chunk9.cpp  lagrangeVectorT_3_3_4_chunks.hpp
src/validity/transmat/: CMakeLists.txt  transMatrices_1_1_1.cpp  transMatrices_1_1_2.cpp  transMatrices_1_1_3.cpp  transMatrices_1_1_4.cpp  transMatrices_1_1_5.cpp  transMatrices_2_1_1.cpp  transMatrices_2_1_2.cpp  transMatrices_2_2_1.cpp  transMatrices_2_2_2.cpp  transMatrices_2_2_3.cpp  transMatrices_2_2_4.cpp  transMatrices_3_1_1.cpp  transMatrices_3_1_2.cpp  transMatrices_3_2_1.cpp  transMatrices_3_3_1.cpp  transMatrices_3_3_2.cpp  transMatrices_3_3_3.cpp  transMatrices_3_3_4.cpp
src/validity/transmatT/: CMakeLists.txt  transMatricesT_1_1_1.cpp  transMatricesT_1_1_2.cpp  transMatricesT_1_1_3.cpp  transMatricesT_1_1_4.cpp  transMatricesT_1_1_5.cpp  transMatricesT_2_1_1.cpp  transMatricesT_2_1_2.cpp  transMatricesT_2_2_1.cpp  transMatricesT_2_2_2.cpp  transMatricesT_2_2_3.cpp  transMatricesT_2_2_4.cpp  transMatricesT_3_1_1.cpp  transMatricesT_3_2_1.cpp  transMatricesT_3_3_1.cpp  transMatricesT_3_3_2.cpp  transMatricesT_3_3_3.cpp
tests/: .tests.cpp.swo  .tests.cpp.swp  CMakeLists.txt  eigen_tests.cpp  tests.cpp
